# validador-identidad-mx-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: cache.py  main.py  models.py  validators.py
docs/: ARCHITECTURE.md
scripts/: demo.sh  setup.sh
tests/: test_api.py  test_validators.py
