[project]
name = "validador-identidad-mx-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "ruff>=0.4.4",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=80"
testpaths = ["tests"]
filterwarnings = ["ignore::ResourceWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
source = ["app"]
data_file = "/tmp/.coverage-validador"

[tool.coverage.report]
fail_under = 80
